--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -3,7 +3,7 @@
     <div class="album py-5 text-center container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <% @workouts.each_with_index do |workout, index| %> 
-                <a href="<%= workout_path(workout) %>">
+                <a href="<%= workout_path(workout) %>" class="text-decoration-none">
                     <div class="card shadow" style="max-width: 40rem; height: 350px;">
                             <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 50%; object-fit: cover;"  %>
                         <div class="card-title-container border rounded p-2">
@@ -13,12 +13,12 @@
                         <div class="row">
                             <div class="col">
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">
-                                        <i class="bi bi-currency-dollar"></i>
+                                    <li class="list-group-item border-0">
                                         <%= workout.price %>
+                                        <i class="bi bi-currency-euro"></i>
                                     </li>
                       
-                                    <li class="list-group-item">
+                                    <li class="list-group-item border-0">
                                         <i class="bi bi-geo-alt"></i>
                                         <%= workout.city.name %>
                                     </li>
@@ -27,15 +27,17 @@
                         
                             <div class="col">
                                 <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">
+                                    <li class="list-group-item border-0">
+                                        <i class="bi bi-calendar-check"></i>
+                                        <%= workout.start_date.strftime("%d/%m/%Y %H:%M") %>
+                                    </li>
+
+                                    <li class="list-group-item border-0">
                                         <i class="bi bi-calendar-x-fill"></i>
                                         <%= workout.end_date.strftime("%d/%m/%Y %H:%M") %>
                                     </li>
 
-                                    <li class="list-group-item">
-                                        <i class="bi bi-calendar-check"></i>
-                                        <%= workout.start_date.strftime("%d/%m/%Y %H:%M") %>
-                                    </li>
+                                    
                                 </ul>
                             </div>
                         </div>
