--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -19,40 +19,43 @@
   <h1>Nos dernières salles à disposition</h1>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
     <% @workouts.take(3).each_with_index do |workout, index| %> 
-      <a href="<%= workout_path(workout) %>">
-        <div class="card shadow" style="max-width: 40rem; height: 350px;">
-          <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 50%; object-fit: cover;"  %>
-          <div class="card-title-container border rounded p-2">
-            <h5 class="card-title"><%= workout.title %></h5>
-            <i class="bi bi-star-fill">Note de l'hote</i>
-          </div>
-          <div class="row">
-            <div class="col">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <i class="bi bi-currency-dollar"></i>
-                  <%= workout.price %>
-                </li>
-                <li class="list-group-item">
-                  <i class="bi bi-geo-alt"></i>
-                  <%= workout.city.name %>
-                </li>
-              </ul>
+      <a href="<%= workout_path(workout) %>" class="text-decoration-none">
+            <div class="card shadow" style="max-width: 40rem; height: 350px;">
+                    <%= image_tag 'logokeella.png', alt: "workout-image", style:"width: 100%; height: 50%; object-fit: cover;"  %>
+                <div class="card-title-container border rounded p-2">
+                    <h5 class="card-title"><%= workout.title %></h5>
+                    <i class="bi bi-star-fill">Note de l'hote</i>
+                </div>
+                <div class="row">
+                  <div class="col">
+                      <ul class="list-group list-group-flush">
+                        <li class="list-group-item border-0">
+                            <%= workout.price %>
+                            <i class="bi bi-currency-euro"></i>
+                        </li>
+                      
+                        <li class="list-group-item border-0">
+                            <i class="bi bi-geo-alt"></i>
+                            <%= workout.city.name %>
+                        </li>
+                      </ul>
+                  </div>
+                        
+                  <div class="col">
+                    <ul class="list-group list-group-flush">
+                        <li class="list-group-item border-0">
+                            <i class="bi bi-calendar-check"></i>
+                            <%= workout.start_date.strftime("%d/%m/%Y %H:%M") %>
+                        </li>
+
+                        <li class="list-group-item border-0">
+                            <i class="bi bi-calendar-x-fill"></i>
+                              <%= workout.end_date.strftime("%d/%m/%Y %H:%M") %>
+                        </li>
+                    </ul>
+                  </div>
+                </div>
             </div>
-            <div class="col">
-              <ul class="list-group list-group-flush">
-                <li class="list-group-item">
-                  <i class="bi bi-calendar-x-fill"></i>
-                  <%= workout.end_date.strftime("%d/%m/%Y %H:%M") %>
-                </li>
-                <li class="list-group-item">
-                  <i class="bi bi-calendar-check"></i>
-                  <%= workout.start_date.strftime("%d/%m/%Y %H:%M") %>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
       </a>
     <% end %>
   </div>
